# abstract_pypit

./: .gitignore  PKG-INFO  README.md  pyproject.toml  setup.py
src/pypit/: __init__.py  __main__.py  clean_the_repos.py  env_utils.py  github_auth.py  github_only.py  main.py  pypit_utils.py
src/pypit/imports/: __init__.py  init_imports.py  paths.py  utils.py
