[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstract_pypit"
version = "0.0.2"
description = "One-command PyPI publisher + GitHub pusher. Version-bumps, builds, uploads to PyPI, commits and pushes to GitHub, and syncs the local install — all in one call."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "putkoff", email = "partners@abstractendeavors.com" }]
requires-python = ">=3.8"
keywords = ["pypi", "publish", "release", "github", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/AbstractEndeavors/abstract_pypit"

[project.scripts]
abstract-pypit = "pypit.main:runPypit"
pypit-github   = "pypit.github_only:runGithubOnly"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
